--- a/actions/exit_cfg_session.yaml
+++ b/actions/exit_cfg_session.yaml
@@ -1,22 +1,22 @@
 ---
 name: exit_cfg_session
 pack: vR5600_base
-description: Exit a configuration session on a vR
+description: Exit configuration session
 runner_type: python-script
 entry_point: "exit_cfg_session.py"
 enabled: true
 parameters:
     deviceIP:
         type: string
-        description: ip address of the vRouter
+        description: IP address of vRouter
         required: true
     login:
         type: string
-        description: login of vRouter
+        description: Login of vRouter
         required: true
     password:
         type: string
-        description: password the vRouter
+        description: Password of vRouter
         required: true
     cmd_path:
         type: string
